derive/tests/ui/fail_type_not_implementing_IoType.stderr
error[E0277]: the trait bound `X: Type<zod_core::Kind::Input>` is not satisfied
  --> tests/ui/fail_type_not_implementing_IoType.rs:13:20
   |
13 |         pub tuple: X,
   |                    ^ the trait `Type<zod_core::Kind::Input>` is not implemented for `X`
   |
   = help: the following other types implement trait `Type<Io>`:
             <GenericPlaceholder<T> as Type<Io>>
             <Struct as Type<zod_core::Kind::Input>>
             <Struct as Type<zod_core::Kind::Output>>
             <bool as Type<zod_core::Kind::Input>>
             <bool as Type<zod_core::Kind::Output>>
             <i16 as Type<zod_core::Kind::Input>>
             <i16 as Type<zod_core::Kind::Output>>
             <i32 as Type<zod_core::Kind::Input>>
           and $N others
note: required by a bound in `inline`
  --> $WORKSPACE/core/src/lib.rs
   |
   | pub trait TypeExt<Io>: Type<Io>
   |                        ^^^^^^^^ required by this bound in `inline`

error[E0277]: the trait bound `X: Type<zod_core::Kind::Output>` is not satisfied
  --> tests/ui/fail_type_not_implementing_IoType.rs:13:20
   |
13 |         pub tuple: X,
   |                    ^ the trait `Type<zod_core::Kind::Output>` is not implemented for `X`
   |
   = help: the following other types implement trait `Type<Io>`:
             <GenericPlaceholder<T> as Type<Io>>
             <Struct as Type<zod_core::Kind::Input>>
             <Struct as Type<zod_core::Kind::Output>>
             <bool as Type<zod_core::Kind::Input>>
             <bool as Type<zod_core::Kind::Output>>
             <i16 as Type<zod_core::Kind::Input>>
             <i16 as Type<zod_core::Kind::Output>>
             <i32 as Type<zod_core::Kind::Input>>
           and $N others
note: required by a bound in `inline`
  --> $WORKSPACE/core/src/lib.rs
   |
   | pub trait TypeExt<Io>: Type<Io>
   |                        ^^^^^^^^ required by this bound in `inline`

error[E0277]: the trait bound `X: Type<zod_core::Kind::Input>` is not satisfied
  --> tests/ui/fail_type_not_implementing_IoType.rs:18:22
   |
18 |     struct Tuple(u8, X);
   |                      ^ the trait `Type<zod_core::Kind::Input>` is not implemented for `X`
   |
   = help: the following other types implement trait `Type<Io>`:
             <GenericPlaceholder<T> as Type<Io>>
             <Struct as Type<zod_core::Kind::Input>>
             <Struct as Type<zod_core::Kind::Output>>
             <bool as Type<zod_core::Kind::Input>>
             <bool as Type<zod_core::Kind::Output>>
             <i16 as Type<zod_core::Kind::Input>>
             <i16 as Type<zod_core::Kind::Output>>
             <i32 as Type<zod_core::Kind::Input>>
           and $N others
note: required by a bound in `inline`
  --> $WORKSPACE/core/src/lib.rs
   |
   | pub trait TypeExt<Io>: Type<Io>
   |                        ^^^^^^^^ required by this bound in `inline`

error[E0277]: the trait bound `X: Type<zod_core::Kind::Output>` is not satisfied
  --> tests/ui/fail_type_not_implementing_IoType.rs:18:22
   |
18 |     struct Tuple(u8, X);
   |                      ^ the trait `Type<zod_core::Kind::Output>` is not implemented for `X`
   |
   = help: the following other types implement trait `Type<Io>`:
             <GenericPlaceholder<T> as Type<Io>>
             <Struct as Type<zod_core::Kind::Input>>
             <Struct as Type<zod_core::Kind::Output>>
             <bool as Type<zod_core::Kind::Input>>
             <bool as Type<zod_core::Kind::Output>>
             <i16 as Type<zod_core::Kind::Input>>
             <i16 as Type<zod_core::Kind::Output>>
             <i32 as Type<zod_core::Kind::Input>>
           and $N others
note: required by a bound in `inline`
  --> $WORKSPACE/core/src/lib.rs
   |
   | pub trait TypeExt<Io>: Type<Io>
   |                        ^^^^^^^^ required by this bound in `inline`
